--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -76,9 +76,9 @@
 <body>
 
   <nav>
-    <a href="{{ url_for('index') }}">Home</a>
-    <a href="{{ url_for('about_us') }}">About Us</a>
-    <a href="{{ url_for('feedback') }}">Feedback</a>
+    <a href="/">Home</a>
+    <a href="about_us">About Us</a>
+    <a href="feedback_">Feedback</a>
   </nav>
 
   <div class="content">
