--- a/templates/redirect.html
+++ b/templates/redirect.html
@@ -73,10 +73,10 @@
 
   <nav>
     <a href="/">Home</a>
-    <a href="aboutus.html">About Us</a>
-    <a href="feedback.html">Feedback</a>
+    <a href="about_us">About Us</a>
+    <a href="feedback">Feedback</a>
   </nav>
-
+ 
   <h1>Choose Your Writing Style</h1>
 
   <div class="button-container">
